--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,10 +3,10 @@
 </div>
 <ul class="custom-nav nav nav-pills">
   <li class="nav-item">
-    <%= link_to 'Home', root_path, class: 'nav-link active'   %>
+    <%= link_to 'Home', root_path, class: "nav-link #{active?(root_path)}"    %>
   </li>
   <li class="nav-item">
-    <%= link_to 'Time entries', posts_path, class: 'nav-link'   %>
+    <%= link_to 'Time entries', posts_path, class: "nav-link #{active?(posts_path)}"   %>
   </li>
   <li class="nav-item dropdown ml-md-auto">
      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown">Account</a>
