--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,39 +1,22 @@
 <h1>Posts</h1>
 <table class="table table-striped table-hover">
-      <thead>
-        <tr>
-          <th>
-            #
-          </th>
-          <th>
-            Date
-          </th>
-          <th>
-            User
-          </th>
-          <th>
-            Rationale
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-<% @posts.each do |post|  %>
-
-        <tr>
-          <td>
-            <%=  post.id %>
-          </td>
-          <td>
-            <%=  post.date %>
-          </td>
-          <td>
-            <%=  post.user.last_name %>
-          </td>
-          <td>
-            <p><%= truncate(post.rationale) %></p>
-          </td>
-
-        </tr>
-<% end %>
-</tbody>
+  <thead>
+    <tr>
+      <th>
+        #
+      </th>
+      <th>
+        Date
+      </th>
+      <th>
+        User
+      </th>
+      <th>
+        Rationale
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <%= render @posts  %>
+  </tbody>
 </table>
