Integration Factory Bot with rpec tests

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,7 +6,7 @@
     <%=  post.date %>
   </td>
   <td>
-    <%=  post.user.full_name %>
+    <%=  post.user %>
   </td>
   <td>
     <p><%= truncate(post.rationale) %></p>
